[gd_scene load_steps=14 format=3 uid="uid://d0naqdd3py4jm"]

[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/styles/UIPanelBase.tres" id="1_542aj"]
[ext_resource type="Script" uid="uid://d1auarm8gwi8i" path="res://panels/UIMainMenu/UIMainMenu.gd" id="1_dbhe3"]
[ext_resource type="PackedScene" uid="uid://dr0kfolsg46yu" path="res://panels/UIPanel/PanelMenuBar.tscn" id="3_4mlm5"]
[ext_resource type="Texture2D" uid="uid://vw0vs7dlct55" path="res://assets/icons/menu.svg" id="4_8hqmw"]
[ext_resource type="Texture2D" uid="uid://c6xnsmttojanx" path="res://assets/icons/Settings.svg" id="4_26f48"]
[ext_resource type="Texture2D" uid="uid://bl7nw5rh753wr" path="res://assets/icons/Network.svg" id="5_788k0"]
[ext_resource type="Texture2D" uid="uid://dpncjre34kf25" path="res://assets/icons/Storage.svg" id="5_ypbqr"]
[ext_resource type="Texture2D" uid="uid://dvdu7rmfoegem" path="res://assets/icons/Window.svg" id="6_6svl8"]
[ext_resource type="Texture2D" uid="uid://b42wnxsau8q6l" path="res://assets/icons/ExternalInput.svg" id="7_g302c"]
[ext_resource type="Texture2D" uid="uid://c6rls43ddilxg" path="res://assets/icons/Save.svg" id="10_dtvuq"]
[ext_resource type="Texture2D" uid="uid://dhhbjjtkgbfl0" path="res://assets/icons/FileOpen.svg" id="12_3vctd"]
[ext_resource type="Texture2D" uid="uid://dyd2xybu6duv4" path="res://assets/icons/NewWindow.svg" id="13_ljneo"]
[ext_resource type="Texture2D" uid="uid://beoapfaav6t6" path="res://assets/icons/Move.svg" id="14_7ow35"]

[node name="UIMainMenu" type="PanelContainer" node_paths=PackedStringArray("all_settings_button", "network_manager_settings_button", "external_input_settings_button", "window_manager_button", "new_window_button", "move_window_button", "save_load_button", "save_file_button", "load_file_button", "edit_controls", "menu_bar")]
offset_right = 468.0
offset_bottom = 342.0
theme_override_styles/panel = ExtResource("1_542aj")
script = ExtResource("1_dbhe3")
all_settings_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer/AllSettings")
network_manager_settings_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer/SettingsContainer/NetworkManagerSettings")
external_input_settings_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer/SettingsContainer/ExternalInputSettings")
window_manager_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer3/WindowManager")
new_window_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer3/WindowManagerContainer/NewWindow")
move_window_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer3/WindowManagerContainer/MoveWindow")
save_load_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer2/SaveLoad")
save_file_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer2/SaveLoadContainer/SaveFile")
load_file_button = NodePath("VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer2/SaveLoadContainer/LoadFile")
edit_controls = NodePath("VBoxContainer/PanelMenuBar/HBoxContainer/EditControls")
menu_bar = NodePath("VBoxContainer/PanelMenuBar")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelMenuBar" parent="VBoxContainer" instance=ExtResource("3_4mlm5")]
layout_mode = 2

[node name="ComponentButton" parent="VBoxContainer/PanelMenuBar/HBoxContainer" index="0"]
text = "Main Menu"
icon = ExtResource("4_8hqmw")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AllSettings" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Settings"
icon = ExtResource("4_26f48")
autowrap_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WindowManager" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer3"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Window Manager"
icon = ExtResource("6_6svl8")
autowrap_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveLoad" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Save Load"
icon = ExtResource("5_ypbqr")
autowrap_mode = 2

[node name="VBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NetworkManagerSettings" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer/SettingsContainer"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Network Manager"
icon = ExtResource("5_788k0")
autowrap_mode = 2

[node name="ExternalInputSettings" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer/SettingsContainer"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "External Input"
icon = ExtResource("7_g302c")
autowrap_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WindowManagerContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewWindow" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer3/WindowManagerContainer"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "New Window"
icon = ExtResource("13_ljneo")
autowrap_mode = 2

[node name="MoveWindow" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer3/WindowManagerContainer"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Move Window"
icon = ExtResource("14_7ow35")
autowrap_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveLoadContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveFile" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer2/SaveLoadContainer"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Save File"
icon = ExtResource("10_dtvuq")
autowrap_mode = 2

[node name="LoadFile" type="Button" parent="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer2/SaveLoadContainer"]
custom_minimum_size = Vector2(140, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "Load File"
icon = ExtResource("12_3vctd")
autowrap_mode = 2

[connection signal="toggled" from="VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer/AllSettings" to="." method="_on_all_settings_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer3/WindowManager" to="." method="_on_window_manager_toggled"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer2/VBoxContainer/PanelContainer2/SaveLoad" to="." method="_on_save_load_toggled"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer/SettingsContainer/NetworkManagerSettings" to="." method="_on_network_manager_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/VBoxContainer2/PanelContainer/SettingsContainer/ExternalInputSettings" to="." method="_on_external_input_settings_pressed"]

[editable path="VBoxContainer/PanelMenuBar"]
